Git_to_Salesforce/ Q-assign/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Assigned_From_Group__c</fullName>
        <label>Assigned From Group</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_From_OwnerUser__c</fullName>
        <label>Assigned From User (Deprecated)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_From_Queue__c</fullName>
        <label>Assigned From Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_assign_Last_Assigned_Date__c</fullName>
        <label>Q-assign Last Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reviewed_Days__c</fullName>
        <formula>LastModifiedDate - Q_assign_Last_Assigned_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q-assign Reviewed Days</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
</CustomObject>